# EE6483-Project

./: .env.example  .gitignore  README.md  agent.md  pyproject.toml  requirements-bert.txt  requirements.txt
configs/: classical_models.json  neural_models.json  tfidf_baseline.json  transformers.json
notebooks/: 01_exploratory_analysis.ipynb  02_tfidf_baseline_experiment.ipynb  03_binary_multiclass_sentiment_analysis.ipynb  04_aspect_based_sentiment_analysis.ipynb  05_target_dependent_sentiment_analysis.ipynb  06_emotion_analysis.ipynb  07_topic_sentiment_analysis.ipynb  tfidf_features_example.ipynb
reports/: EE6483_Product_Review_Sentiment_Report.docx  EE6483_Product_Review_Sentiment_Report.md  assignment_brief_extracted.txt  classical_model_leaderboard.csv  classical_model_runs.csv  literature_survey_foundations.md  report_template.md  submission.csv  submission_notes.txt
reports/experiments/tfidf_logreg/test_size_0_20/seed_42/: metrics.json
reports/experiments/tfidf_logreg/test_size_0_20/seed_52/: metrics.json
reports/experiments/tfidf_logreg/test_size_0_20/seed_62/: metrics.json
reports/experiments/tfidf_logreg/test_size_0_30/seed_42/: metrics.json
scripts/: generate_comparison_report.py  generate_submission.py  run_pipeline.py  train_classical_models.py  train_full_classical_submission.py  train_neural_model.py  train_tfidf_baseline.py  train_transformer.py
src/sentiment_project/: __init__.py  core.py  data.py  deep_learning.py  inference.py  modeling.py  nn_models.py  torch_data.py  torch_training.py  training.py  transformer_training.py
(+23 files in other folders)
